--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -2,15 +2,19 @@
   <!-- Header Section -->
   <header class="header">
     <img src="logo.png" alt="CIDB Logo" class="logo" />
-
     <div class="header-title">
       <h6>User Registration</h6>
     </div>
-
     <div class="header-links">
-      <a href="#" class="login-link">Already have an account? Login here</a>
+      <div>
+        <a href="#" class="login-link">Already have an account?</a>
+        <a href="#" class="login-link">Login here</a>
+      </div>
     </div>
+
   </header>
+
+
 
   <!-- Form Container -->
   <div class="form-container">
