--- a/src/app/registration-form/registration-form.component.css
+++ b/src/app/registration-form/registration-form.component.css
@@ -1,8 +1,8 @@
 /* General Page and Layout */
 .page-container {
   background-color: #e9ebf0;
-  overflow-x: hidden; /* Prevent horizontal scroll */
-  padding: 0; /* Optional: Add some padding to the sides if needed */
+  overflow-x: hidden;
+  padding: 0;
 }
 
 .header {
@@ -13,10 +13,10 @@
   align-items: center;
   font-weight: bold;
   position: relative;
-  z-index: 1; /* Ensure the header stays below the form */
-  height: 150px; /* Adjusted header height */
-  width:100%; /* Ensure the header takes full width */
-  box-sizing: border-box; /* Include padding and border in element's total width */
+  z-index: 1;
+  height: 150px;
+  width:100%;
+  box-sizing: border-box;
 }
 
 .header-title {
@@ -25,7 +25,7 @@
 }
 
 .logo {
-  max-width: 450px; /* Adjusted logo size */
+  max-width: 450px;
   font-size: 20px;
   font-weight: bold;
 }
@@ -39,21 +39,21 @@
   margin-left: 10px;
 }
 
-.login-links { /* New class for login links */
-  margin-left: 20px; /* Adjust this value to move the links left */
+.login-links {
+  margin-left: 20px;
 }
 
 .form-container {
   max-width: 1000px;
-  margin: -50px auto 40px; /* Adjust negative margin to overlap the header */
+  margin: -50px auto 40px;
   padding: 50px;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   position: relative;
-  z-index: 2; /* Form will appear above the header */
-  width: calc(100% - 20px); /* Full width minus padding */
-  box-sizing: border-box; /* Include padding in width */
+  z-index: 2;
+  width: calc(100% - 20px);
+  box-sizing: border-box;
 }
 
 h2 {
@@ -166,23 +166,23 @@ mat-form-field .mat-select[disabled] {
   .header {
     padding: 20px;
     flex-direction: column;
-    height: auto; /* Allow header to resize based on content */
-    align-items: center; /* Align items to start */
+    height: auto;
+    align-items: center;
   }
 
   .logo {
-    max-width: 400px; /* Adjusted logo size */
+    max-width: 400px;
   }
 
   .header-links {
     font-size: 16px;
-    margin-left: 0; /* Remove left margin to center align */
+    margin-left: 0;
   }
 
   .form-container {
     padding: 20px;
-    width: calc(100% - 20px); /* Full width minus padding */
-    margin: -12px auto 20px; /* Adjust negative margin to overlap the header */
+    width: calc(100% - 20px);
+    margin: -12px auto 20px;
   }
 
   .form-group {
@@ -222,7 +222,7 @@ mat-form-field .mat-select[disabled] {
   }
 
   .form-container {
-    margin: -12px auto 20px; /* Adjust negative margin to overlap the header */
+    margin: -12px auto 20px;
     width: 98%;
       padding: 15px;
     }
@@ -234,7 +234,7 @@ mat-form-field .mat-select[disabled] {
   }
 
   .logo {
-    max-width: 400px; /* Adjusted logo size for smaller screens */
+    max-width: 400px;
   }
 
   .header-links {
